[package]
name = "vampirc-io"
version = "0.4.0"
description = "A library for asynchronous, non-blocking, UCI protocol–based communication between chess UIs and chess engines."
documentation = "https://docs.rs/vampirc_io"
homepage = "https://vampirc.kejzar.si"
repository = "https://github.com/vampirc/vampirc-io.git"
categories = ["asynchronous", "game-engines", "command-line-interface"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["uci", "chess", "io", "stdin", "stdout"]
authors = ["Matija Kejžar <matija@kejzar.si>"]
edition = "2018"

[badges]
travis-ci = { repository = "vampirc/vampirc-io", branch = "master" }
maintenance = { status = "actively-developed" }

[features]

[dependencies]
async-std = {version ="1.5", features = ["unstable"]}
vampirc-uci = { git = 'https://github.com/vampirc/vampirc-uci.git', branch="master"}
futures = "0.3"


